@@ -1,26 +1,35 @@
 package io.priyotech.github;
 
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
-
+/**Both will be short circuit operation works on predicate true value*/
 public class StreamApiEnhancementOne {
     public static void main(String[] args) {
         List<Stock> allStocks=StockUtils.getAllStocks();
 
+        List<Stock> sortedReversedStocks = allStocks
+                .stream()
+                .sorted(Comparator.comparingLong(Stock::getPriceInBn).reversed())
+                .toList();
+        System.out.println(sortedReversedStocks);
         List<Stock> sortedStocks = allStocks
                 .stream()
-                .sorted(Comparator.comparing(Stock::getPriceInBn))
+                .sorted(Comparator.comparingLong(Stock::getPriceInBn))
                 .toList();
+        System.out.println(sortedStocks);
+        List<String> stockStockLessThan300L = sortedReversedStocks.stream()
+                .takeWhile(TakeWhileDrop::isStockGreaterThan200L)
+                .peek(stock -> System.out.println("takeWhile:: " + stock))
+                .map(Stock::getName).toList();
 
-        List<String> stock50L = sortedStocks.stream()
-                .peek(stock -> System.out.println(stock.getName()))
-                .takeWhile(TakeWhileDrop::isStockLessThan50L)
-                .map(Stock::getName)
-                .collect(Collectors.toList());
+        List<String> stockGreaterThan200L = sortedStocks.stream()
+                .dropWhile(TakeWhileDrop::isStockLessThan300L)
+                .peek(stock -> System.out.println("dropWhile:: " + stock))
+                .map(Stock::getName).toList();
 
-        System.out.println(stock50L);
+        System.out.println("takeWhile op::"+stockStockLessThan300L);
+        System.out.println("dropWhile op::"+stockGreaterThan200L);
     }
 }
 
@@ -49,23 +58,35 @@ class Stock{
     public void setPriceInBn(Long priceInBn) {
         this.priceInBn = priceInBn;
     }
+
+    @Override
+    public String toString() {
+        return "Stock{" +
+                "name='" + name + '\'' +
+                ", priceInBn=" + priceInBn +
+                '}';
+    }
 }
 
 class TakeWhileDrop{
-    public static boolean isStockLessThan50L(Stock stock){
-        return stock.getPriceInBn()<50L;
+    public static boolean isStockLessThan300L(Stock stock){
+        return stock.getPriceInBn()<300L;
     }
+    public static boolean isStockGreaterThan200L(Stock stock){
+        return stock.getPriceInBn()>200L;
+    }
+
 }
 
 class StockUtils{
     public static List<Stock> getAllStocks() {
-        return List.of(new Stock("Google", 137L),
-                new Stock("Apple", 196L),
-                new Stock("L&T", 53L),
-                new Stock("Meta", 228L),
-                new Stock("HU", 7L),
+        return List.of(new Stock("Google", 537L),
+                new Stock("Apple", 296L),
+                new Stock("L&T", 153L),
+                new Stock("Meta", 628L),
+                new Stock("HU", 170L),
                 new Stock("TI", 32L),
-                new Stock("Twitter", 42L),
+                new Stock("Twitter", 332L),
                 new Stock("SBI", 92L),
                 new Stock("HDFC", 55L),
                 new Stock("ICICI", 73L));
